--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,20 @@
-body, #app {
+body {
   background-color: #000;
   color: #fff;
+}
+
+#app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
 }
 
-input, button {
+.input, .button {
   margin: 10px;
-  padding: 10px;
 }
 
-button {
-  background-color: #b11226; /* ID God Red */
-  color: #fff;
-  border: none;
-}
-
-input {
-  border: 2px solid #b11226;
-  color: #fff;
-  background-color: #000;
+.button {
+  background-color: #b11226;
 }
